Enhance Crocido Scraper functionality with local scraping support, improved configuration handling, and refined XPath extraction methods. Added UI elements for local scraping and server save options, along with robust error handling and logging. Updated background scripts to manage active configurations and streamline data extraction processes.

--- a/extension/ui/popup.html
+++ b/extension/ui/popup.html
@@ -8,7 +8,12 @@
   <h1>Crocido Scraper</h1>
   <button id="startSetup">Start Setup</button>
   <button id="exportCsv">Export CSV</button>
-  <button id="scrapeAll">Scrape All</button>
+  <button id="scrapeAll">Scrape All (Server)</button>
+  <button id="localScrape">Scrape Locally</button>
+  <div>
+    <input type="checkbox" id="saveLocalToServer" name="saveLocalToServer" style="margin-left: 10px;">
+    <label for="saveLocalToServer" style="font-size: 0.9em;">Save to server</label>
+  </div>
   <hr>
   <div>
     <label for="apiKeyInput" style="display: block; margin-bottom: 5px;">API Key:</label>
